3. In CorrData.to_asdf(), save stack_method.

UTILS:
1. Added gaussian() and ricker() as the shaping wavelets.
2. Added box_smooth().

DOWNLOADERS:
1. In read_data(), changed default to False for getstainv.

HELPERS:
1. Added wavelet_labels().

MONITORING:
1. Added vpcluster_evaluate_kmean() to find the optimal number of clusters.

DISPERSION:
1. Improved frequency steps in disp_waveform_bp().

==================================================================
Updates in v0.7.2
All modules: Cleaned up unused functions.

TYPES:
1. CorrData.subset() changed overwrite to False by default.
2. DvvData, added get_info() to streamline and wrapup key information for other use.
3. DvvData: added save() as a wrapper for saving functions, including to_asdf() and to_pickle.
4. DvvData: added to_pickle() to save data to pickle files. This is mainly aiming to
    workaround with the problem of saving large attributes in h5 file, through asdf.
5. DvvData: added subfreq as a Boolean attribute.
6. DvvData.plot(): added option to plot when subfreq=False. only plots error bars.

MONITORING:
1. extract_dvvdata: added option to read in pickle files.
2. get_dvv(): added option to save to pickle.
3. get_dvv(): added "ts" method.
4. Modified ts_dvv() to provide filter option and streamlined to work as a standalone method for SeisGo.
5. Delted unused functions.

OBSMASTER:
1. Moved some funcitons from utils.py to here.

NOISE:
1. Added reorganize_corrfile() to reorganize corrfile.
2. Added option in do_correlation() to specify the flag of output_structure.
3. Added comments and descriptions to major functions.

HELPERS:
1. Added this new module to provide a place showing a summary of helper function using SeisGo.

==================================================================
Changes in v0.7.0
STACKING:
1. Added clusterstack() and tfpws().

MONITORING:
1. Added option to specify file name when saving to *.h5 file.

==================================================================