@@ -8,15 +8,13 @@ from stockwell import st
 from tslearn.utils import to_time_series, to_time_series_dataset
 from tslearn.clustering import TimeSeriesKMeans
 """
-Modified from NoisePy stacking functions. Originally written by Chengxin Jiang and Marine Donolle.
-
-Adapted for SeisGo by Xiaotao Yang
+Stacking functions.
 """
-def seisstack(d,method,par=None):
+def stack(d,method,par=None):
     """
     this is a wrapper for calling individual stacking functions.
     d: data. 2-d array
-    method: stacking method, one of "linear","pws","tf-pws","robust","acf","nroot","selective",
+    method: stacking method, one of "linear","pws","robust","acf","nroot","selective",
             "cluster"
     par: dictionary containing all parameters for each stacking method. defaults will
         be used if not specified.
@@ -29,7 +27,7 @@ def seisstack(d,method,par=None):
     if method not in method_list:
         raise ValueError("$s not recoganized. use one of $s"%(method,str(method_list)))
     par0={"axis":0,"p":2,"g":1,"cc_min":0.0,"epsilon":1E-5,"maxstep":10,
-            "win":None,"stat":False,"t":0.75,'plot':False,'normalize':True}  #stat: if true, will return statistics.
+            "win":None,"stat":False,"h":0.75,'plot':False,'normalize':True,'ref':None}  #stat: if true, will return statistics.
     if par is None:
         par=par0
     else:
@@ -42,20 +40,28 @@ def seisstack(d,method,par=None):
     elif method.lower() == 'tfpws':
         ds = tfpws(d,p=par['p'])
     elif method.lower() == 'robust':
-        ds = robust(d,epsilon=par['epsilon'],maxstep=par['maxstep'],win=par["win"],stat=par['stat'])
+        ds = robust(d,epsilon=par['epsilon'],maxstep=par['maxstep'],win=par["win"],
+                stat=par['stat'],ref=par['ref'])
     elif method.lower() == 'acf':
         ds = adaptive_filter(d,g=par['g'])
     elif method.lower() == 'nroot':
         ds = nroot(d,p=par['p'])
     elif method.lower() == 'selective':
         ds = selective(d,cc_min=par['cc_min'],epsilon=par['epsilon'],maxstep=par['maxstep'],
-                stat=par['stat'])
+                stat=par['stat'],ref=par['ref'],win=par["win"])
     elif method.lower() == 'cluster':
-        ds = clusterstack(d,t=par['t'],axis=par['axis'],normalize=par['normalize'],plot=par['plot'])
+        ds = clusterstack(d,h=par['h'],axis=par['axis'],win=par["win"],
+        normalize=par['normalize'],plot=par['plot'])
     #
     return ds
 
-def robust(d,epsilon=1E-5,maxstep=10,win=None,stat=False):
+def seisstack(d,method,par=None):
+    """
+    This is the same as stack(), to be compatible with old usage.
+    """
+    return stack(d,method=method,par=par)
+
+def robust(d,epsilon=1E-5,maxstep=10,win=None,stat=False,ref=None):
     """
     this is a robust stacking algorithm described in Pavlis and Vernon 2010. Generalized
     by Xiaotao Yang.
@@ -67,6 +73,7 @@ def robust(d,epsilon=1E-5,maxstep=10,win=None,stat=False):
     maxstep: maximum iterations. default 10.
     win: [start_index,end_index] used to compute the weight, instead of the entire trace. Default None.
             When None, use the entire trace.
+    ref: reference stack, with the same length as individual data. Default: None. Use median().
     RETURNS:
     ----------------------
     newstack: numpy vector contains the stacked cross correlation
@@ -80,7 +87,10 @@ def robust(d,epsilon=1E-5,maxstep=10,win=None,stat=False):
     res  = 9E9  # residuals
     w = np.ones(d.shape[0])
     nstep=0
-    newstack = np.median(d,axis=0)
+    if ref is None:
+        newstack = np.median(d,axis=0)
+    else:
+        newstack = ref
     if win is None:
         win=[0,-1]
     while res > epsilon and nstep <=maxstep:
@@ -125,7 +135,7 @@ def adaptive_filter(d,g=1):
     Nfft = next_fast_len(M)
 
     # fft the 2D array
-    spec = scipy.fftpack.fft(d,axis=1,n=Nfft)[:,:M]
+    spec = fft(d,axis=1,n=Nfft)[:,:M]
 
     # make cross-spectrm matrix
     cspec = np.zeros(shape=(N*N,M),dtype=np.complex64)
@@ -147,7 +157,7 @@ def adaptive_filter(d,g=1):
     p = np.power((S1-S2)/(S2*(N-1)),g)
 
     # make ifft
-    narr = np.real(scipy.fftpack.ifft(np.multiply(p,spec),Nfft,axis=1)[:,:M])
+    narr = np.real(ifft(np.multiply(p,spec),Nfft,axis=1)[:,:M])
     newstack=np.mean(narr,axis=0)
 
     #
@@ -224,7 +234,7 @@ def nroot(d,p=2):
     return newstack
 
 
-def selective(d,cc_min,epsilon=1E-5,maxstep=10,stat=False):
+def selective(d,cc_min,epsilon=1E-5,maxstep=10,win=None,stat=False,ref=None):
     '''
     this is a selective stacking algorithm developed by Jared Bryan/Kurama Okubo.
 
@@ -233,7 +243,11 @@ def selective(d,cc_min,epsilon=1E-5,maxstep=10,stat=False):
     d: numpy.ndarray contains the 2D cross correlation matrix
     epsilon: residual threhold to quit the iteration
     cc_min: numpy.float, threshold of correlation coefficient to be selected
-
+    epsilon: residual threhold to quit the iteration (a small number). Default 1E-5
+    maxstep: maximum iterations. default 10.
+    win: [start_index,end_index] used to compute the weight, instead of the entire trace. Default None.
+            When None, use the entire trace.
+    ref: reference stack, with the same length as individual data. Default: None. Use mean().
     RETURNS:
     ----------------------
     newstack: numpy vector contains the stacked cross correlation
@@ -249,13 +263,18 @@ def selective(d,cc_min,epsilon=1E-5,maxstep=10,stat=False):
 
     res  = 9E9  # residuals
     cof  = np.zeros(N,dtype=np.float32)
-    newstack = np.mean(d,axis=0)
+    if ref is None:
+        newstack = np.mean(d,axis=0)
+    else:
+        newstack = ref
 
     nstep = 0
+    if win is None:
+        win=[0,-1]
     # start iteration
     while res>epsilon and nstep<=maxstep:
         for ii in range(N):
-            cof[ii] = np.corrcoef(newstack, d[ii,:])[0, 1]
+            cof[ii] = np.corrcoef(newstack[win[0]:win[1]], d[ii,win[0]:win[1]])[0, 1]
 
         # find good waveforms
         indx = np.where(cof>=cc_min)[0]
@@ -269,7 +288,7 @@ def selective(d,cc_min,epsilon=1E-5,maxstep=10,stat=False):
     else:
         return newstack
 #
-def clusterstack(d,t=0.75,axis=0,normalize=True,plot=False):
+def clusterstack(d,h=0.75,win=None,axis=0,normalize=True,plot=False):
     '''
     Performs stack after clustering. The data will be clustered into two groups.
     If the two centers of the clusters are similar (defined by corrcoef >= "t"), the original
@@ -280,7 +299,9 @@ def clusterstack(d,t=0.75,axis=0,normalize=True,plot=False):
     PARAMETERS:
     ---------------------
     d: N length array of time series data (numpy.ndarray)
-    t: corrcoeff threshold to decide which group/cluster to use. Default 0.75.
+    h: corrcoeff threshold to decide which group/cluster to use. Default 0.75.
+    win: [start_index,end_index] used to compute the weight, instead of the entire trace. Default None.
+            When None, use the entire trace.
     axis: which axis to stack. default 0.
     normalize: Normalize the traces before clustering. This will only influence the cluster.
             The final stack will be produced using the original data.
@@ -309,11 +330,13 @@ def clusterstack(d,t=0.75,axis=0,normalize=True,plot=False):
     snr_all=[]
     centers_all=[]
     cidx=[]
+    if win is None:
+        win=[0,-1]
     for yi in range(ncluster):
         cidx.append(np.where((y_pred==yi))[0])
         center=km.cluster_centers_[yi].ravel()#np.squeeze(np.mean(ts[y_pred == yi].T,axis=2))
         centers_all.append(center)
-        snr=np.max(np.abs(center))/rms(np.abs(center))
+        snr=np.max(np.abs(center[win[0]:win[1]]))/utils.rms(np.abs(center))
         snr_all.append(snr)
 
     #
@@ -326,7 +349,7 @@ def clusterstack(d,t=0.75,axis=0,normalize=True,plot=False):
             plt.title('Cluster %d: %d'%(yi+1,len(cidx[yi])))
         plt.show()
     cc=np.corrcoef(centers_all[0],centers_all[1])[0,1]
-    if cc>= t: #use all data
+    if cc>= h: #use all data
         snr_normalize=snr_all/np.sum(snr_all)
         newstack=np.zeros((M))
         for yi in range(ncluster):
